--- a/public/css/app.css
+++ b/public/css/app.css
@@ -4,4 +4,8 @@ table{font-size:12px;}
 .table>thead>tr>th, .table>tbody>tr>th, .table>tfoot>tr>th, .table>thead>tr>td, .table>tbody>tr>td, .table>tfoot>tr>td {padding:6px;}
 
 
+.attachment-item {padding:5px}
+.attachment-item .attachment-link i.fa{font-size: 30px;}
+
+
 
