--- a/public/css/theme/matrix-style.css
+++ b/public/css/theme/matrix-style.css
@@ -243,7 +243,7 @@ hr{ border-top-color:#dadada;}
 #breadcrumb a {
 	padding: 8px 20px 8px 10px;
 	display: inline-block;
-	background-image: url('../img/breadcrumb.png');
+	background-image: url('../../img/breadcrumb.png');
 	background-position: center right;
 	background-repeat: no-repeat;
 	font-size: 11px;
