--- a/public/css/theme/matrix-style.css
+++ b/public/css/theme/matrix-style.css
@@ -1587,3 +1587,15 @@ div.dataTables_wrapper .ui-widget-header {
 }
 #sidebar .content{ display:none;}
 }
+
+
+/*cutom style*/
+span.error {
+	display:block;
+    color: red;
+    font-size: 10px;
+}
+
+.search-wrap{text-align:right;}
+.search-wrap select{}
+.search-wrap button{float:right;}
