--- a/public/css/theme/matrix-style.css
+++ b/public/css/theme/matrix-style.css
@@ -1599,3 +1599,5 @@ span.error {
 .search-wrap{text-align:right;}
 .search-wrap select{}
 .search-wrap button{float:right;}
+
+#loginform{padding:10px;color:#fff}
