working on myteam

--- a/public/css/theme/matrix-style.css
+++ b/public/css/theme/matrix-style.css
@@ -1607,8 +1607,9 @@ span.error {
     padding: 4px 8px;
 }
 
+.update-done{line-height:14px;}
 .new-update .update-date .update-day {font-size: 14px;}
 
 small {
-    font-size: 75%;
+    font-size: 78%;
 }
